Forgot how that worked 😕
smh

--- a/_posts/2016-02-09-bass.md
+++ b/_posts/2016-02-09-bass.md
@@ -7,4 +7,4 @@ tags:   fish, shell, nvm, bash, bass
 
 I use [Fish](/fish-shell/) for my shell and up until recently I’ve just dealt with its slow startup time. I treated it as my penance for being fussy about such things. But today I reached the limit of my patience and decided to track down the cause of this delay. I discovered was this was a [commmon issue](https://github.com/passcod/nvm-fish-wrapper/issues/13#issuecomment-108113067) with the [Fish wrapper](https://github.com/passcod/nvm-fish-wrapper/) for the `nvm` bash utility. The author of the tool has deprecated it in lieu of a general Bash-Fish bridge called [Bass](https://github.com/edc/bass). After installing Bass, I was able to quickly setup the `nvm` command for Fish using the following function:
 
-<div data-gist="https://gist.github.com/matthewspencer/21a8b97f34cdb9b99e3a"></div>
+<div data-gist="21a8b97f34cdb9b99e3a"></div>
